--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-sdk android:minSdkVersion="8" />
   	<!-- for synchronization -->
   	<uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.timsu.astrid.permission.READ_TASKS"/>
+    <uses-permission android:name="com.todoroo.astrid.READ" />
+    <uses-permission android:name="com.todoroo.astrid.WRITE" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
     
