--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="ru.otdelit.astrid.opencrx"
-      android:versionCode="1"
-      android:versionName="1.0.1">
+      android:versionCode="1" android:versionName="1.0.2">
       
     <uses-sdk android:minSdkVersion="8" />
   	<!-- for synchronization -->
