--- a/project.properties
+++ b/project.properties
@@ -4,10 +4,10 @@
 # This file must be checked in Version Control Systems.
 #
 # To customize properties used by the Ant build system use,
-# "build.properties", and override values to adapt the script to your
+# "ant.properties", and override values to adapt the script to your
 # project structure.
 
-# Project target.
-target=android-8
 android.library=false
 android.library.reference.1=../astrid/api
+# Project target.
+target=android-14
