AndroidDeveloper free-lancer work

--- a/project.properties
+++ b/project.properties
@@ -8,6 +8,6 @@
 # project structure.
 
 android.library=false
-android.library.reference.1=../astrid/api
+android.library.reference.1=../astrid-master/api
 # Project target.
-target=android-14
+target=android-15
