--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,72 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="ru.otdelit.astrid.opencrx"
-      android:versionCode="3" android:versionName="1.0.5">
-      
+    package="ru.otdelit.astrid.opencrx"
+    android:versionCode="3"
+    android:versionName="1.0.6" >
+
     <uses-sdk android:minSdkVersion="8" />
-  	<!-- for synchronization -->
-  	<uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="com.timsu.astrid.permission.READ_TASKS"/>
+    <!-- for synchronization -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.timsu.astrid.permission.READ_TASKS" />
     <uses-permission android:name="com.todoroo.astrid.READ" />
     <uses-permission android:name="com.todoroo.astrid.WRITE" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-    
-	    <receiver android:name="ru.otdelit.astrid.opencrx.OpencrxFilterExposer">
-	      <intent-filter>
-	        <action android:name="com.todoroo.astrid.REQUEST_FILTERS" />
-	        <category android:name="android.intent.category.DEFAULT" />
-	      </intent-filter>
-	    </receiver>
-	    
-	    <receiver android:name="ru.otdelit.astrid.opencrx.OpencrxCustomFilterCriteriaExposer">
-	      <intent-filter>
-	        <action android:name="com.todoroo.astrid.REQUEST_CUSTOM_FILTER_CRITERIA" />
-	        <category android:name="android.intent.category.DEFAULT" />
-	      </intent-filter>
-	    </receiver>
-	    
-	    <activity android:name="ru.otdelit.astrid.opencrx.OpencrxPreferences"
-	              android:theme="@android:style/Theme"
-	              android:label="@string/opencrx_PPr_header">
-	      <meta-data android:name="category"
-	                 android:resource="@string/SyP_label" />
-	      <intent-filter>   
-	        <action android:name="com.todoroo.astrid.SETTINGS" />
-	        <category android:name="android.intent.category.DEFAULT" />
-	      </intent-filter>
-	    </activity>
-	    
-	    <activity android:name="ru.otdelit.astrid.opencrx.OpencrxLoginActivity"
-	              android:theme="@android:style/Theme" android:configChanges="orientation|keyboardHidden" />
-	              
-	    <service android:name="ru.otdelit.astrid.opencrx.OpencrxBackgroundService">
-	      <intent-filter>
-	        <action android:name="com.todoroo.astrid.opencrx.SYNC" />
-	        <category android:name="android.intent.category.DEFAULT" />
-	      </intent-filter>
-	    </service>
-	    
-	    <receiver android:name="ru.otdelit.astrid.opencrx.OpencrxStartupReceiver">
-	      <intent-filter>
-	        <action android:name="android.intent.action.BOOT_COMPLETED" />
-	        <category android:name="android.intent.category.DEFAULT" />
-	      </intent-filter>
-	    </receiver>
-	    
-	    <receiver android:name="ru.otdelit.astrid.opencrx.OpencrxDetailExposer">
-	      <intent-filter>
-	        <action android:name="com.todoroo.astrid.REQUEST_DETAILS" />
-	        <category android:name="android.intent.category.DEFAULT" />
-	      </intent-filter>
-	    </receiver>
-	        
-	    <receiver android:name="ru.otdelit.astrid.opencrx.OpencrxSyncActionExposer">
-	      <intent-filter>
-	        <action android:name="com.todoroo.astrid.REQUEST_SYNC_ACTIONS" />
-	        <category android:name="android.intent.category.DEFAULT" />
-	      </intent-filter>
-	    </receiver>    
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <receiver android:name="ru.otdelit.astrid.opencrx.OpencrxFilterExposer" >
+            <intent-filter>
+                <action android:name="com.todoroo.astrid.REQUEST_FILTERS" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="ru.otdelit.astrid.opencrx.OpencrxCustomFilterCriteriaExposer" >
+            <intent-filter>
+                <action android:name="com.todoroo.astrid.REQUEST_CUSTOM_FILTER_CRITERIA" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name="ru.otdelit.astrid.opencrx.OpencrxPreferences"
+            android:label="@string/opencrx_PPr_header"
+            android:theme="@android:style/Theme" >
+            <meta-data
+                android:name="category"
+                android:resource="@string/SyP_label" />
+
+            <intent-filter>
+                <action android:name="com.todoroo.astrid.SETTINGS" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="ru.otdelit.astrid.opencrx.OpencrxLoginActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:theme="@android:style/Theme" />
+
+        <service android:name="ru.otdelit.astrid.opencrx.OpencrxBackgroundService" >
+            <intent-filter>
+                <action android:name="com.todoroo.astrid.opencrx.SYNC" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
+
+        <receiver android:name="ru.otdelit.astrid.opencrx.OpencrxStartupReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="ru.otdelit.astrid.opencrx.OpencrxDetailExposer" >
+            <intent-filter>
+                <action android:name="com.todoroo.astrid.REQUEST_DETAILS" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="ru.otdelit.astrid.opencrx.OpencrxSyncActionExposer" >
+            <intent-filter>
+                <action android:name="com.todoroo.astrid.REQUEST_SYNC_ACTIONS" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
     </application>
+
 </manifest>
